--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,5 +67,5 @@
         "*.sln": "*.csproj",
         "*.slnx": "*.csproj"
     },
-    "dotnet.defaultSolution": "Locker-baby.slnx"
+    "dotnet.defaultSolution": "Locker Baby 2d.slnx"
 }
